# sdl_tutorial

./: CMakeLists.txt  README.md
Lesson0/src/: main.cpp
Lesson1/src/: main.cpp
include/: cleanup.h  res_path.h
